--- a/HotelManagement-Kinalitos/package.json
+++ b/HotelManagement-Kinalitos/package.json
@@ -17,8 +17,11 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
-    "morgan": "^1.10.0"
-  }, 
+    "morgan": "^1.10.0",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.15.0",
+    "pdfkit-table": "^0.1.99"
+  },
   "devDependencies": {
     "nodemon": "^3.1.0"
   },
